--- a/docs/ICD/03.interfaces/00.interfaces.adoc
+++ b/docs/ICD/03.interfaces/00.interfaces.adoc
@@ -5,7 +5,98 @@
 This OpenAPI Document describes the endpoints exposed by License Building Block deployments. Using this API will allow to update the licenses that the owner has access. This access is protected by OIDC Client, ans SCIM Client components so the End Users resources can be protected using both the Login Service and the Policy Enforcement Point and access them through the Policy Decision Point.
 
 
-== Endpoints
+== API Endpoints
+
+    
+[.GET]
+=== GET License
+    
+`GET /license/<id>`
+
+
+===== Description 
+
+This operation returns the Code License associated to an id.
+
+
+===== Parameters
+
+License ID
+
+===== Return Type
+
+String
+
+===== Responses
+
+.http response codes
+[cols="2,3,1"]
+|===         
+| Code | Message | Datatype 
+
+| 200
+| OK
+| String
+
+| 401
+| Unauthorized
+| ResponseType
+
+| 403
+| Forbidden
+| ResponseType
+|===         
+
+
+[.POST]
+=== POST/PUT License
+
+
+Insert
+`POST /licenses/`
+
+
+Update
+`POST /license/<id>`
+
+
+===== Description 
+
+This operation inserts or updates a License with the required parameters
+
+===== Parameters
+
+The data model is JSON based and will have a template TBD.
+
+===== Return Type
+
+ResponseType,
+
+===== Responses
+
+.http response codes
+[cols="2,3,1"]
+|===         
+| Code | Message | Datatype 
+
+| 200
+| OK
+| String
+
+| 400
+| Bad Request
+| ResponseType
+
+| 401
+| Unauthorized
+| ResponseType
+
+| 403
+| Forbidden
+| ResponseType
+
+|===         
+
     
 [.BillingChecks]
 === Billing Checks
