--- a/docs/SDD/README.adoc
+++ b/docs/SDD/README.adoc
@@ -18,15 +18,15 @@ The travis job pushes the generated doc files (html/images + pdf) to trhe 'gh-pa
 
 The Travis settings for the project must include the following environment variables...
 
-GH_USER_NAME::AlvaroVillaueva
+GH_USER_NAME::
 the name used in the commit message
 
-GH_USER_EMAIL::alvaro.villanueva@deimos-space.com
+GH_USER_EMAIL::
 the email address used in the commit message
 
-GH_REPOS_NAME::um-license-manager
+GH_REPOS_NAME::
 the name of the repos in GitHub, i.e. the last part of the GitHub URL https://github.com/EOEPCA/<GH_REPOS_NAME>
 
-GH_TOKEN::186205d4a6447b858fb673ed1a697166423dd373
+GH_TOKEN::
 the access token that allows Travis to push to the GitHub repos 'gh-pages' branch. This must be generated as a `Personal Access Token` within the settings of the `EOEPCA-CI` GitHub account (https://github.com/settings/tokens) and pasted in to set the environment variable in Travis. +
 *In doing so, ensure that the 'display value' option is disabled*.
